load save global ion library, make concurrent